--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/includes/_custom-banner.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/includes/_custom-banner.scss
@@ -124,7 +124,7 @@ $global-bar-background-colour: #ffdd00;
      }
  }
 
-@media (max-width: 47.0525em) {
+@media (max-width: 640px) {
   .global-bar {
     .global-bar-message-container {
       strong.govuk-warning-text__text {
